--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 </head>
 
 <body>
-  <div id="app">
-    <!--ssr-outlet-->
-  </div>
+  <div id="app"><!--ssr-outlet--></div>
   <script type="module" src="/src/entry-client.ts"></script>
   <script>
     window.__INITIAL_STATE__ = '<!--vuex-state-->';
